# dashboard-mockup

./: README.md  app.py  pyproject.toml
src/: plots.py
