[project]
name = "dashboard-mockup"
version = "0.1.0"
description = "Dashboard to demonstrate streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.18.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "streamlit-folium>=0.23.1",
    "streamlit-option-menu>=0.4.0",
    "streamlit>=1.39.0",
]

[tool.ruff]
line-length = 79
lint.select = [
    "E",
    "W",
    "I",
    "N",
    "F",
    "B",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "ERA",
    "PD",
]